fix(layout): fix misc issues on mobile layout

--- a/src/app/layout/mobile-layout/mobile-layout.css
+++ b/src/app/layout/mobile-layout/mobile-layout.css
@@ -5,12 +5,18 @@
 
   height: 100vh;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
 }
 
 app-header {
   margin: var(--content-margin-x);
+}
+
+main {
+  height: 0;
+  min-height: 100%;
+  overflow-y: auto;
 }
 
 app-main-panel {
@@ -24,6 +30,7 @@ app-main-panel {
   padding: 1rem 0.5rem;
   overflow-y: auto;
   height: 100%;
+  box-sizing: border-box;
 }
 
 .menu-selection {
@@ -75,5 +82,6 @@ footer {
 }
 
 app-pug-counter-panel {
-  margin: 0 auto 10px auto;
+  margin-bottom: 0.4rem;
+  margin-left: 0.5rem;
 }
